# Django_InternshipsManagementSystem

./: .env  .gitignore  Dockerfile  compose.yaml  docs.txt  manage.py  pyproject.toml  requirements.txt
InternshipManagementSystem/: asgi.py  settings.py  urls.py  wsgi.py
apps/applications/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/applications/migrations/: 0001_initial.py
apps/companies/: admin.py  models.py  serializers.py  urls.py  views.py
apps/companies/migrations/: 0001_initial.py  0002_company_email.py
apps/home/: views.py
apps/internships/: admin.py  models.py  serializers.py  urls.py  views.py
apps/internships/migrations/: 0001_initial.py
apps/students/: admin.py  models.py  serializers.py
apps/students/migrations/: 0001_initial.py
templates/: index.html
