[tool.poetry]
name = "internshipsmanagement"
version = "0.1.0"
description = ""
authors = ["Misa <smihail.email@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django-unfold = "^0.55.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
